--- a/F09c NY - Faktorisering av primtall/.project
+++ b/F09c NY - Faktorisering av primtall/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>F09c - Test om primtall</name>
+	<name>F09c NY - Faktorisering av primtall</name>
 	<comment></comment>
 	<projects>
 	</projects>
